# DiscoClubDemo

./: CMakeLists.txt  README.md
cmake/: add_resources.cmake  bin2c.cmake
ppgso/: Mesh_Assimp.cpp  Mesh_Assimp.h  shader.cpp
shader/: instanced_frag.glsl  instanced_vert.glsl  particle_frag.glsl  particle_vert.glsl  phong_frag.glsl  phong_vert.glsl  shadow_depth_vert.glsl  skybox_frag.glsl  skybox_vert.glsl
shader/postprocess/: bloom_composite_frag.glsl  blur_frag.glsl  bright_extract_frag.glsl
src/: main.cpp
src/objects/: Club.cpp  Club.h
src/objects/djSet/: ConfettiCannon.h  ConfettiCanon.cpp  ConfettiSystem.cpp  ConfettiSystem.h  DiscoBall.cpp  DiscoBall.h  DjSet.cpp  DjSet.h
src/objects/entrance/: Door.cpp  Door.h  SecurityCamera.cpp  SecurityCamera.h  SkyBox.cpp  SkyBox.h
src/objects/inside/: BarSet.cpp  BarSet.h  TableSet.cpp  TableSet.h  TileGrid.cpp  TileGrid.h
src/objects/inside/lamps/: Bubble.h  Buble.cpp  Lamp.cpp  Lamp.h  LavaLamp.cpp  LavaLamp.h
src/objects/lightObjects/: LightBulb.cpp  LightBulb.h  LightEmitter.cpp  LightEmitter.h
src/scene/: Camera.cpp  Camera.h  KeyFrames.cpp  KeyFrames.h  Light.cpp  Light.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/window/: ClubbingWindow.cpp  ClubbingWindow.h
